--- a/src/index.css
+++ b/src/index.css
@@ -133,5 +133,11 @@ body {
 @media screen and (max-width: 900px) {
   .techstack h2 {
     font-size: 40px;
+    top: 60px;
+  }
+  .techstack {
+    height: 60vh;
+    margin-top: 20px;
+    margin-bottom: 0px;
   }
 }
